Solved PMD errors