@@ -88,7 +88,7 @@ public class XmlPullParserFactory {
     public void setFeature(String name,
                            boolean state) throws XmlPullParserException {
 
-        features.put(name, new Boolean(state));
+        features.put(name, Boolean.valueOf(state));
     }
 
 
@@ -116,7 +116,7 @@ public class XmlPullParserFactory {
      */
 
     public void setNamespaceAware(boolean awareness) {
-        features.put (XmlPullParser.FEATURE_PROCESS_NAMESPACES, new Boolean (awareness));
+        features.put (XmlPullParser.FEATURE_PROCESS_NAMESPACES, Boolean.valueOf (awareness));
     }
 
     /**
@@ -143,7 +143,7 @@ public class XmlPullParserFactory {
      */
 
     public void setValidating(boolean validating) {
-        features.put (XmlPullParser.FEATURE_VALIDATION, new Boolean (validating));
+        features.put (XmlPullParser.FEATURE_VALIDATION, Boolean.valueOf (validating));
     }
 
     /**
